--- a/fox.html
+++ b/fox.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Mozilla is cool</h1>
-<img src="firefox.png" alt="Mi imagen de prueba" width="300" heigh="300">
+<img src="Firefox.png" alt="Mi imagen de prueba" width="300" heigh="300">
 <p>En Mozilla, somos una comunidad global de:</p>
 <ul>
     <li>Tecnólogos</li>
